TMZ-532 add selector to avoid pre-wrap when inline editing

--- a/modules/template-parts/assets/scss/hello-plus-footer.scss
+++ b/modules/template-parts/assets/scss/hello-plus-footer.scss
@@ -189,6 +189,10 @@
 
 	&__contact-information {
 		color: var(--footer-contact-information-color);
+
+		&.pen.elementor-inline-editing {
+			white-space: normal;
+		}
 	}
 
 	&__menu {
